# MIDIRenderer

./: CMakeLists.txt  LICENSE  README.md  copy_dlls.cmake.in  install_dlls.cmake.in
cmake/: FindFluidSynth.cmake  FindOgg.cmake  FindSndFile.cmake  FindVorbis.cmake  SndFileConfig.cmake  SndFileConfigVersion.cmake
src/: cxxopts.hpp  deleteruniqueptr.h  midirenderer.cpp  midivorbisrenderer.cpp  midivorbisrenderer.h  oggvorbisencoder.cpp  oggvorbisencoder.h  pathresolution.cpp  pathresolution.h  platformargswrapper.cpp  platformargswrapper.h  platformchar.h  platformsupport.cpp  platformsupport.h  songrendercontainer.cpp  songrendercontainer.h
